--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.0.5",
     "express": "^4.14.0",
-    "pigpio": "^0.4.0"
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
