--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack -d",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register --recursive test",
     "mockpi": "node mockpi.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "material-ui": "^0.16.6",
+    "mocha": "^3.2.0",
     "react-tap-event-plugin": "^2.0.1",
+    "sinon": "^1.17.7",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
@@ -23,9 +26,12 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.3.12",
+    "enzyme": "^2.7.0",
     "json-loader": "^0.5.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "mocha": "^3.10.9",
+    "react": "^15.4.2",
+    "sinon": "^3.10.8",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-node-externals": "^1.5.4"
