--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.14.0",
     "material-ui": "^0.16.6",
     "mocha": "^3.2.0",
+    "react-dom": "^15.4.2",
     "react-tap-event-plugin": "^2.0.1",
     "sinon": "^1.17.7",
     "whatwg-fetch": "^2.0.1"
