--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-preset-react": "^6.16.0",
     "chai": "^3.3.12",
     "enzyme": "^2.7.0",
+    "jsdom": "9.9.1",
+    "jsdom-global": "2.1.1",
     "json-loader": "^0.5.4",
     "mocha": "^3.10.9",
     "react": "^15.4.2",
