--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^3.5.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "express-validator": "^3.1.2",
     "material-ui": "^0.16.6",
     "mocha": "^3.2.0",
     "react-tap-event-plugin": "^2.0.1",
