--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-ui": "^0.16.6",
     "mocha": "^3.2.0",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "sinon": "^1.17.7",
     "whatwg-fetch": "^2.0.1"
   },
