--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-validator": "^3.1.2",
     "material-ui": "^0.16.6",
     "mocha": "^3.2.0",
+    "react-bootstrap": "^0.30.7",
+    "react-bootstrap-slider": "^1.1.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "sinon": "^1.17.7",
