--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsdom-global": "2.1.1",
     "json-loader": "^0.5.4",
     "mocha": "^3.10.9",
+    "node-mocks-http": "^1.5.6",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
